@@ -15,19 +15,19 @@
 //  You should have received a copy of the GNU Affero General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //
-// File: classes/SetPaths.php
+// File: classes/BntSetPaths.php
 //
 // Auto detect and set the game path (uses the logic from setup_info)
 // If it does not work, please comment this out and set it in db_config.php instead.
 // But PLEASE also report that it did not work for you at the main BNT forums (forums.blacknova.net)
 
-if (strpos ($_SERVER['PHP_SELF'], 'SetPaths.php')) // Prevent direct access to this file
+if (strpos ($_SERVER['PHP_SELF'], 'BntSetPaths.php')) // Prevent direct access to this file
 {
     $error_file = $_SERVER['SCRIPT_NAME'];
     include_once './error.php';
 }
 
-class SetPaths
+class BntSetPaths
 {
     static function setGamepath ()
     {
