@@ -155,9 +155,9 @@ return array(
     'ADORecordset_sqlite3' => $vendorDir . '/adodb/adodb-php/drivers/adodb-sqlite3.inc.php',
     'ADORecordset_sqlitepo' => $vendorDir . '/adodb/adodb-php/drivers/adodb-sqlitepo.inc.php',
     'ADORecordset_sybase' => $vendorDir . '/adodb/adodb-php/drivers/adodb-sybase.inc.php',
-    'AdminLog' => $baseDir . '/classes/AdminLog.php',
     'Artist' => $vendorDir . '/adodb/adodb-php/tests/test-active-relationsx.php',
     'Auth_Container_ADOdb' => $vendorDir . '/adodb/adodb-php/pear/Auth/Container/ADOdb.php',
+    'BntAdminLog' => $baseDir . '/classes/BntAdminLog.php',
     'BntBigBang' => $baseDir . '/classes/BntBigBang.php',
     'BntBounty' => $baseDir . '/classes/BntBounty.php',
     'BntCompress' => $baseDir . '/classes/BntCompress.php',
@@ -180,6 +180,7 @@ return array(
     'BntSchema' => $baseDir . '/classes/BntSchema.php',
     'BntScore' => $baseDir . '/classes/BntScore.php',
     'BntSectorDefense' => $baseDir . '/classes/BntSectorDefense.php',
+    'BntSetPaths' => $baseDir . '/classes/BntSetPaths.php',
     'BntShip' => $baseDir . '/classes/BntShip.php',
     'BntSmarty' => $baseDir . '/classes/BntSmarty.php',
     'BntTeam' => $baseDir . '/classes/BntTeam.php',
@@ -204,7 +205,6 @@ return array(
     'PluginSystem' => $baseDir . '/classes/PluginSystem.php',
     'Rugrat' => $vendorDir . '/adodb/adodb-php/tests/test-active-relationsx.php',
     'SHA1Crypt' => $vendorDir . '/adodb/adodb-php/session/crypt.inc.php',
-    'SetPaths' => $baseDir . '/classes/SetPaths.php',
     'Smarty' => $vendorDir . '/smarty/smarty/distribution/libs/Smarty.class.php',
     'SmartyBC' => $vendorDir . '/smarty/smarty/distribution/libs/SmartyBC.class.php',
     'SmartyCompilerException' => $vendorDir . '/smarty/smarty/distribution/libs/Smarty.class.php',
