@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361
+class ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
